# STM32F446_CMake

./: CMakeLists.txt  README.md
Application/: CMakeLists.txt
Application/Inc/: stm32f4xx_hal_conf.h
Application/Src/: main.c
Drivers/: CMakeLists.txt
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
System/: CMakeLists.txt
cmake/: arm-none-eabi-gcc.cmake
